src/objects/Historico_de_Asignaciones__c.object
<CustomObject>
    <description>Representa el registro histórico de las asignaciones, las pre-asignaciones y las des-asignaciones realizadas sobre la entidad Orden de Trabajo desde que ésta fue registrada en Salesforce.</description>
    <fields>
        <fullName>HAS_CAS_Asignacion_Directa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignación Directa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAS_DAT_Fecha_Cambio_Estado__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Fecha Cambio  Estado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HAS_FOR_Asignacion_Directa__c</fullName>
        <formula>HAS_LKP_Profesional__r.RSE_CAS_Asignacion_Directa__c</formula>
        <label>Asignación Directa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAS_LKP_Cita_de_Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cita de Servicio</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Históricos de Asignaciones</relationshipLabel>
        <relationshipName>Historicos_de_Asignaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAS_LKP_Orden_de_trabajo__c</fullName>
        <description>Orden de trabajo asociada al histórico de asignaciones.</description>
        <label>Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Histórico de asignaciones</relationshipLabel>
        <relationshipName>HAS_REL_Historico_de_asignaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HAS_LKP_Profesional__c</fullName>
        <label>Profesional</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Históricos de Asignaciones</relationshipLabel>
        <relationshipName>Historicos_de_Asignaciones</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HAS_TXT_Estado_Antiguo_Cita__c</fullName>
        <label>Estado Antiguo Cita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAS_TXT_Estado_Nuevo_Cita__c</fullName>
        <label>Estado Nuevo Cita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAS_TXT_Motivo_Rechazo_Desasignacion__c</fullName>
        <label>Motivo Rechazo/Desasignación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Histórico de Asignaciones</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de Asignaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>